fix readability for news

--- a/css/everest.css
+++ b/css/everest.css
@@ -126,7 +126,7 @@ warnhead {
 }
 
 newshead {
-	background-color: #1A1A1A;
+	background-color: #131313;
 	border-left-style: solid;
 	border-left-color: #4a86e8ff;
 	border-width: 4px;
